--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ on:
 jobs:
   test-plugin:
     env:
-      plugin_name: "otio-xges-adapters"
+      plugin_name: "otio-xges-adapter"
 
     strategy:
       matrix:
