--- a/.github/workflows/create_draft_release.yaml
+++ b/.github/workflows/create_draft_release.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     env:
-      plugin_name: "otio-xges-adapters"
+      plugin_name: "otio-xges-adapter"
 
     name: Create Release
     runs-on: ubuntu-latest
